--- a/app/views/profiles/edit.html.slim
+++ b/app/views/profiles/edit.html.slim
@@ -1,8 +1,12 @@
-h1 Editing profile
+.row
+  .col-xs-6.col-xs-offset-2
+    h1 Editing profile
 
-== render 'form'
+    == render 'form'
 
-= link_to 'Show', @profile
-'|
-= link_to 'Back', profiles_path
+    p
+      = link_to 'Show', @profile
+      ='
+      '|
+      = link_to 'Back', profiles_path
 
