--- a/app/views/profiles/index.html.slim
+++ b/app/views/profiles/index.html.slim
@@ -1,27 +1,29 @@
-h1 Listing profiles
+.row
+  .col-xs-12
+    h1 Listing profiles
 
-table.table
-  tr
-    th Name
-    th Service
-    th Profile
-    th Access key
-    th Secret key
-    th
-    th
-    th
+    table.table
+      tr
+        th Name
+        th Service
+        th Profile
+        th Access key
+        th Secret key
+        th
+        th
+        th
 
-  - @profiles.each do |profile|
-    tr
-      td = profile.name
-      td = profile.service
-      td = profile.profile_id
-      td = profile.access_key
-      td = profile.secret_key
-      td = link_to 'Show', profile
-      td = link_to 'Edit', edit_profile_path(profile)
-      td = link_to 'Destroy', profile, data: {:confirm => 'Are you sure?'}, :method => :delete
+      - @profiles.each do |profile|
+        tr
+          td = profile.name
+          td = profile.service
+          td = profile.profile_id
+          td = profile.access_key
+          td = profile.secret_key
+          td = link_to 'Show', profile
+          td = link_to 'Edit', edit_profile_path(profile)
+          td = link_to 'Destroy', profile, data: {:confirm => 'Are you sure?'}, :method => :delete
 
-br
+    br
 
-= link_to 'New Profile', new_profile_path
+    = link_to 'New Profile', new_profile_path
