--- a/app/views/profiles/new.html.slim
+++ b/app/views/profiles/new.html.slim
@@ -1,5 +1,7 @@
-h1 New profile
+.row
+  .col-xs-6.col-xs-offset-2
+    h1 New profile
 
-== render 'form'
+    == render 'form'
 
-= link_to 'Back', profiles_path
+    = link_to 'Back', profiles_path
