add selenium, database cleaner, and factory girl; add feature tests for Profiles

--- a/app/views/profiles/index.html.slim
+++ b/app/views/profiles/index.html.slim
@@ -13,7 +13,7 @@
         th
 
       - @profiles.each do |profile|
-        tr
+        tr id="profile_#{profile.id}"
           td = profile.name
           td = profile.service
           td = profile.profile_id
