experiment with switching to simple_form for the payment form

--- a/app/assets/stylesheets/payments.css.scss
+++ b/app/assets/stylesheets/payments.css.scss
@@ -3,6 +3,10 @@
   display: inline;
 }
 
+#payment_card_cvn, #payment_card_type, #payment_bill_to_address_postal_code {
+  width: 17em;
+}
+
 #templates {
   display: none;
 }
