--- a/app/views/payments/new.html.slim
+++ b/app/views/payments/new.html.slim
@@ -2,93 +2,45 @@
   .col-xs-6.col-xs-offset-2
     h1 New payment
 
-    = form_tag @profile.transaction_url, method: :post, class: 'form-horizontal', id: 'payment_form' do |f|
+    = simple_form_for @payment,
+        url: @payment.form_action_url,
+        html: { class: 'form-horizontal' },
+        role: 'form',
+        wrapper: :horizontal_form,
+        wrapper_mappings: { radio_buttons: :horizontal_radio_and_checkboxes } do |f|
 
-      = hidden_field_tag 'card_expiry_date'
-      = hidden_field_tag 'amount', 100
+      = @payment.hidden_input f, :card_expiry_date
 
-      - @signed_form_data.each do |key, value|
-        = hidden_field_tag key, value
+      - @payment.signed_form_data.each do |field, value|
+        = @payment.hidden_input f, field, value
 
       fieldset
         legend Credit Card Information
 
-        .form-group.required
-          = label_tag 'bill_to_forename', 'First Name', class: 'col-sm-4 control-label required'
-          .col-sm-8
-            = text_field_tag 'bill_to_forename', params[:req_bill_to_forename], required: true, class: 'required form-control'
+        = @payment.simple_form_input f, :bill_to_forename
+        = @payment.simple_form_input f, :bill_to_surname
+        = @payment.simple_form_input f, :card_number
+        = f.input :card_expiry_date, label: @payment.field_label(:card_expiry_date) do
+          = f.date_select :card_expiry_date, { discard_day: true, order: [:month, :year], start_year: Date.today.year, end_year:  (Date.today.year+20), use_two_digit_numbers: true, date_separator: ' / ', prompt: true }, { :class => 'select required form-control card-expiry' }
+        = @payment.simple_form_input f, :card_cvn
+        = @payment.simple_form_select f, :card_type, card_types, nil, 'Please select...'
 
-        .form-group.required
-          = label_tag 'bill_to_surname', 'Last Name', class: 'col-sm-4 control-label required'
-          .col-sm-8
-            = text_field_tag 'bill_to_surname', params[:req_bill_to_surname], required: true, class: 'required form-control'
-
-        .form-group.required
-          = label_tag 'card_number', 'Card Number', class: 'col-sm-4 control-label required'
-          .col-sm-8
-            = text_field_tag 'card_number', nil, required: true, class: 'required form-control'
-
-        .form-group.required
-          = label_tag 'card_expiry_month', 'Expiration', class: 'col-sm-4 control-label required'
-          .col-sm-8
-            = select_tag 'card_expiry_month', options_for_select(card_expiry_months), { class: 'required form-control card-expiry' }
-            ='
-            |/
-            ='
-            = select_tag 'card_expiry_year', options_for_select(card_expiry_years), { class: 'required form-control card-expiry' }
-
-        .form-group.required
-          = label_tag 'card_cvn', 'Security Code', class: 'col-sm-4 control-label required'
-          .col-sm-4
-            = text_field_tag 'card_cvn', nil, class: 'input-small required form-control', pattern: "^[0-9]+$"
-
-        .form-group.required
-          = label_tag 'card_type', 'Card Type', class: 'col-sm-4 control-label required'
-          .col-sm-4
-            = select_tag 'card_type', options_for_select(card_types), { include_blank: true, class: 'required form-control' }
 
       fieldset
         legend Billing Address
 
-        .form-group.required
-          = label_tag 'bill_to_email', 'Email', class: 'col-sm-4 control-label required'
-          .col-sm-8
-            = text_field_tag 'bill_to_email', params[:req_bill_to_email], required: true, class: 'required form-control', pattern: '[^@]+@[^@]+\.[a-zA-Z]{2,6}'
-
-        .form-group.required
-          = label_tag 'bill_to_address_country', 'Country', class: 'col-sm-4 control-label required'
-          .col-sm-8
-            = select_tag 'bill_to_address_country', options_for_select(countries, (params[:req_bill_to_address_country].present? ? params[:req_bill_to_address_country] : 'US')), { class: 'required form-control' }
-
-        .form-group.required
-          = label_tag 'bill_to_address_line1', 'Street Address (line 1)', class: 'col-sm-4 control-label required'
-          .col-sm-8
-            = text_field_tag 'bill_to_address_line1', params[:req_bill_to_address_line1], required: true, class: 'required form-control'
-
-        .form-group
-          = label_tag 'bill_to_address_line2', 'Street Address (line 2)', class: 'col-sm-4 control-label'
-          .col-sm-8
-            = text_field_tag 'bill_to_address_line2', params[:req_bill_to_address_line2], class: 'form-control'
-
-        .form-group.required
-          = label_tag 'bill_to_address_city', 'City', class: 'col-sm-4 control-label required'
-          .col-sm-8
-            = text_field_tag 'bill_to_address_city', params[:req_bill_to_address_city], required: true, class: 'required form-control'
-
-        .form-group.required
-          = label_tag 'bill_to_address_state', 'State (Province)', class: 'col-sm-4 control-label required'
-          .col-sm-8
-            = select_tag 'bill_to_address_state', options_for_select(us_states, params[:req_bill_to_address_state]), { include_blank: true, class: 'required form-control' }
-
-        .form-group.required
-          = label_tag 'bill_to_address_postal_code', 'Zip (Postal Code)', class: 'col-sm-4 control-label required'
-          .col-sm-4
-            = text_field_tag 'bill_to_address_postal_code', params[:req_bill_to_address_postal_code], required: true, class: 'required form-control'
+        = @payment.simple_form_input f, :bill_to_email
+        = @payment.simple_form_select f, :bill_to_address_country, countries, 'US'
+        = @payment.simple_form_input f, :bill_to_address_line1
+        = @payment.simple_form_input f, :bill_to_address_line2
+        = @payment.simple_form_input f, :bill_to_address_city
+        = @payment.simple_form_select f, :bill_to_address_state, us_states, nil, 'Please select...'
+        = @payment.simple_form_input f, :bill_to_address_postal_code
 
       .form-group
-        .col-sm-8.col-sm-offset-4
-          = submit_tag 'Submit', class: 'btn btn-primary', data: { disable_with: "Please wait.." }
+        .col-sm-offset-3.col-sm-9
+          = f.button :submit, 'Submit', class: 'btn btn-primary'
 
 form#templates
-  = select_tag 'bill_to_address_state', options_for_select(us_states), { include_blank: true, class: 'required form-control', id: 'bill_to_address_state_select_template' }
-  = text_field_tag 'bill_to_address_state', nil, id: 'bill_to_address_state_text_template', required: true, class: 'required form-control'
+  = select_tag 'bill_to_address_state', options_for_select(us_states), { prompt: 'Please select...', class: 'select required form-control', id: 'payment_bill_to_address_state_select_template' }
+  = text_field_tag 'bill_to_address_state', nil, id: 'payment_bill_to_address_state_input_template', class: 'string required form-control'
