--- a/app/views/payments/new.html.slim
+++ b/app/views/payments/new.html.slim
@@ -4,8 +4,7 @@
 
     = simple_form_for @payment,
         url: @payment.form_action_url,
-        html: { class: 'form-horizontal' },
-        role: 'form',
+        html: { class: 'form-horizontal', role: 'form' },
         wrapper: :horizontal_form do |f|
 
       = @payment.hidden_input f, :card_expiry_date
