--- a/app/views/carts/new.html.slim
+++ b/app/views/carts/new.html.slim
@@ -3,9 +3,7 @@
     h1 Generic shopping cart
 
     = form_tag pay_path, method: :post, class: 'form-horizontal', id: 'cart_form' do |f|
-      = hidden_field_tag 'amount', @amount
-      = hidden_field_tag 'signature', @signature
-      = hidden_field_tag 'signed_field_names', 'amount'
-
+      - @signed_fields.each do |field, value|
+        = hidden_field_tag field, value
       = submit_tag 'Buy something cool for $100', class: 'btn btn-primary', data: { disable_with: "Please wait.." }
 
