--- a/app/views/carts/new.html.slim
+++ b/app/views/carts/new.html.slim
@@ -5,5 +5,5 @@
     = form_tag pay_path, method: :post, class: 'form-horizontal', id: 'cart_form' do |f|
       - @signed_fields.each do |field, value|
         = hidden_field_tag field, value
-      = submit_tag 'Buy something cool for $100', class: 'btn btn-primary', data: { disable_with: "Please wait.." }
+      = submit_tag 'Buy something cool for $100', class: 'btn btn-primary', id: 'commit', data: { disable_with: "Please wait.." }
 
