--- a/app/views/payments/pay.html.slim
+++ b/app/views/payments/pay.html.slim
@@ -44,7 +44,7 @@
 
       .form-group
         .col-sm-offset-3.col-sm-9
-          = f.button :submit, 'Submit', class: 'btn btn-primary'
+          = f.button :submit, 'Submit', class: 'btn btn-primary', id: 'commit'
 
 form#templates
   = select_tag 'bill_to_address_state', options_for_select(us_states), { prompt: 'Please select...', class: 'select required form-control', id: 'payment_bill_to_address_state_select_template' }
