update for renamed method call

--- a/app/views/payments/pay.html.slim
+++ b/app/views/payments/pay.html.slim
@@ -9,7 +9,7 @@
 
       = hidden_input f, :card_expiry_date
 
-      - @payment.sign_cybersource_fields.each do |field, value|
+      - @payment.signed_fields.each do |field, value|
         = hidden_input f, field, value
 
       fieldset
