This is an example of subclassing the Payment model. This provides a flexible way for gem users to add optional fields (like shipping address) and do things like decide if card_cvn should be required or not

--- a/app/views/payments/pay.html.slim
+++ b/app/views/payments/pay.html.slim
@@ -34,6 +34,7 @@
       fieldset
         legend Billing Address
 
+        = simple_form_input f, :bill_to_phone, params[:bill_to_phone]
         = simple_form_input f, :bill_to_email, params[:bill_to_email]
         = simple_form_select f, :bill_to_address_country, countries, (params[:bill_to_address_country].present? ? params[:bill_to_address_country] : 'US')
         = simple_form_input f, :bill_to_address_line1, params[:bill_to_address_line1]
