lock-in the "payment" namespace for the form, regardless of the name of the subclass, so ur JS doesn't blow up

--- a/app/views/payments/pay.html.slim
+++ b/app/views/payments/pay.html.slim
@@ -4,6 +4,7 @@
 
     = simple_form_for @payment,
         url: @payment.form_action_url,
+        as: :payment,
         html: { class: 'form-horizontal', role: 'form' },
         wrapper: :horizontal_form do |f|
 
